# hx-citadel-ansible

./: .ansible-lint  .clauderules  .coderabbit.yaml  .cursorrules  .editorconfig  .fqdn-allowlist  .gitignore  .pre-commit-config.yaml  =2.0.0  CITADEL_SHIELD_UI_REALITY_CHECK.md  CI_AUTOMATION_CAPABILITIES.md  CLAUDE-RULES.md  CLAUDE.md  CLAUDE_REVIEW_RECONCILIATION.md  CRITICAL_FIXES_REMAINING.md  DEPLOYMENT_ISSUES_SUMMARY.md  DEVIN_IMPLEMENTATION_PROMPT.md  DEV_SERVER_REVIEW_SUMMARY.md  ENV_SETUP_STATUS.md  NEXT-SESSION-REMINDER.md  PR32_FINAL_APPROVAL.md  PR32_ISSUE_RESOLUTION_SUMMARY.md  README.md  SESSION_SUMMARY_2025-10-12.md  TEST-004-web-crawling.md  TEST-011-lightrag-e2e.md  ansible.cfg  common_types.py  distribute_ssh_key.sh  edit_vault_instructions.txt  fix-main-py-indentation.sh  fix_apt_issues.sh  integration-snippet.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.yml  rules.md  rules_analysis.md  (+5 more)
configuration/: qdrant_ui_config_2025-10-07.md
docs/: AGENT_WORK_SUMMARY.md  CHANGELOG.md  CIRCUIT-BREAKER-VALIDATION.md  CODEBASE-ENHANCEMENT-RECOMMENDATIONS.md  COMPONENT-STATUS-AND-TESTING.md  CRITICAL_FIXES_REMAINING.md  FASTMCP-DEPLOYMENT-PREP.md  IMPLEMENTATION-SUMMARY.md  MCP_TOOLS_REFERENCE.md  NEXT-SESSION-REMINDER.md  OLLAMA-ARCHITECTURE-FIX.md  QUICK-START.md  QUICK_REFERENCE.md  README.md  SESSION-SUMMARY-2025-10-11-P1-TESTS.md  TASK-032-COMPLETION-SUMMARY.md  TECH-KB-GUIDE.md  TYPE-CHECKING-GUIDE.md  fleetwide_fqdn_policy_ansible_validation.md  mcp-server-deployment-plan.md  mcp-server-deployment-plan.md.backup  orchestrator-server-deployment-plan.md  shield-mcp-backup-recovery.md  vault-qdrant-api-key-addition.md
group_vars/: db_nodes.yml  llm_nodes.yml
host_vars/: hx-ollama1.yml  hx-ollama2.yml  hx-orchestrator-server.yml
inventory/: hx-qwui.ini  prod.ini
maintenance/: fix-apt.yml  host-inventory.yml  update-hosts-file.yml
playbooks/: deploy-api.yml  deploy-base-setup.yml  deploy-base.yml  deploy-copilotkit.yml  deploy-db.yml  deploy-langgraph.yml  deploy-llm.yml  deploy-orchestrator-base.yml  deploy-orchestrator-fastapi.yml  deploy-orchestrator-lightrag.yml  deploy-orchestrator-local.yml  deploy-orchestrator-postgresql.yml  deploy-orchestrator-qdrant.yml  deploy-orchestrator-redis.yml  deploy-orchestrator-workers.yml  deploy-orchestrator.yml  deploy-pydantic-ai.yml  deploy-qdrant-ui.yml  deploy-shield-ag-ui.yml  deploy-vector.yml  deploy-with-validation.yml  docker-role-run.yml  integrate-agents-workflows.yml  preflight-check.yml  preflight-shield-ag-ui.yml  smoke-tests.yml  (+2 more)
(+516 files in other folders)
